init-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-test
  namespace: pranob-test
spec:
  containers:
    - name: app-container
      image: busybox
      command: ['sh', '-c', 'cat /work-dir/config && echo App Started']
      volumeMounts:
      - name: workdir
        mountPath: /work-dir
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
        requests:
          cpu: "50m"
          memory: "64Mi"
