nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  # namespace: pranob-test-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          # volumeMounts:
          #   - name: nginx-config
          #     mountPath: /etc/nginx/nginx.conf
          #     subPath: nginx.conf

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
