pod-definiton.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod # name of the pod
  labels:
    app: myapp # name of the App
    type: front-end

spec:
  containers:  
    - name: nginx-container
      image: nginx
