statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: django
  namespace: pranob-test
spec:
  serviceName: django
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: 283623578217.dkr.ecr.eu-west-1.amazonaws.com/django-template:HEAD.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: service
              protocol: TCP
          volumeMounts:
            - name: db
              mountPath: /db
          # readinessProbe:
          #   exec:
          #     command:
          #       - cat
          #       - /tmp/healthy
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: db
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
