service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
  namespace: pranob-test-namespace
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
